# just-enough-emojis

./: Cargo.toml  README.md
src/: main.rs
